--- a/2-JS-basics/starter/index.html
+++ b/2-JS-basics/starter/index.html
@@ -6,6 +6,8 @@
     </head>
 
     <body>
-        <h1>Section 2: JavaScript Language Basics</h1>
+        <!-- <h1>Section 2: JavaScript Language Basics</h1> -->
     </body>
+
+    <script src="script.js"></script>
 </html>
